--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -10,9 +10,13 @@
 
 - 递归，排序，二分查找，搜索，哈希算法，贪心算法，分治算法，回溯算法，动态规划，字符串匹配算法  
 
-## 数组
+## [数组](https://github.com/guan997/LeetCode/blob/master/javascript/01_array.md)
 
-- 
+- #### 三数之和
+
+- #### 多数元素
+
+- #### 缺失的第一个正数
 
 ## 链表
 
