--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -41,9 +41,9 @@
 
 - #### 斐波那契数
 
-## 排序
+## [排序](https://github.com/guan997/LeetCode/blob/master/javascript/06_sorts.md)
 
-- 
+- #### x 的平方根
 
 ## 二分查找
 
