--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -18,9 +18,13 @@
 
 - #### 缺失的第一个正数
 
-## 链表
+## [链表](https://github.com/guan997/LeetCode/blob/master/javascript/07_linkedlist.md)
 
-- 
+- #### 环形链表
+
+- #### 合并两个有序链表
+
+- #### 合并K个升序链表
 
 ## [栈](https://github.com/guan997/LeetCode/blob/master/javascript/03_stack.md)
 
@@ -41,13 +45,13 @@
 
 - #### 斐波那契数
 
-## [排序](https://github.com/guan997/LeetCode/blob/master/javascript/06_sorts.md)
-
-- #### x 的平方根
-
-## 二分查找
+## [排序](https://github.com/guan997/LeetCode/blob/master/javascript/06_sort.md)
 
 - 
+
+## [二分查找](https://github.com/guan997/LeetCode/master/javascript/07_binary.md)
+
+- #### x 的平方根
 
 ## 散列表
 
