--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -47,7 +47,11 @@
 
 ## [排序](https://github.com/guan997/LeetCode/blob/master/javascript/06_sort.md)
 
-- 
+- #### 冒泡排序
+
+- #### 插入排序
+
+- #### 选择排序
 
 ## [二分查找](https://github.com/guan997/LeetCode/master/javascript/07_binary.md)
 
