--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -61,9 +61,13 @@
 
 - 
 
-## 字符串
+## [字符串](https://github.com/guan997/LeetCode/master/javascript/08_string.md)
 
-- 
+- #### 反转字符串
+
+- #### 翻转字符串里的单词
+
+- #### 字符串转换整数  
 
 ## 二叉树
 
