--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -59,7 +59,7 @@
 
 ## 散列表
 
-- 
+
 
 ## [字符串](https://github.com/guan997/LeetCode/master/javascript/08_string.md)
 
@@ -69,9 +69,13 @@
 
 - #### 字符串转换整数  
 
-## 二叉树
+## [二叉树](https://github.com/guan997/LeetCode/master/javascript/09_tree.md)
 
-- 
+- #### 翻转二叉树
+
+- #### 二叉树的最大深度
+
+- #### 路径总和
 
 ## 堆
 
