--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -104,6 +104,83 @@ function findMax(item,Di,Pi) {
 }
 ```
 
+# 被3整除
+
+题目描述
+
+小Q得到一个神奇的数列: 1, 12, 123,...12345678910,1234567891011...。
+
+并且小Q对于能否被3整除这个性质很感兴趣。
+
+小Q现在希望你能帮他计算一下从数列的第l个到第r个(包含端点)有多少个数可以被3整除。
+
+输入描述:
+
+```
+输入包括两个整数l和r(1 <= l <= r <= 1e9), 表示要求解的区间两端。
+```
+
+输出描述:
+
+```
+输出一个整数, 表示区间内能被3整除的数字个数。
+```
+
+输入
+
+```
+2 5
+```
+
+输出
+
+```
+3
+```
+
+说明
+
+```
+12, 123, 1234, 12345...
+其中12, 123, 12345能被3整除。
+```
+
+## 数学
+
+解题思路：
+
+- 该题结果应该为A[i] % 3,若结果为A[i]%3 = (1+2+3+...+i)%3;
+- 自然数序列1,2,3,4,5...i取模3的结果分别是1,2,0,1,2,0,...,i % 3
+- 可以等性质A[i]%3 = (1+2+0+1+2+0...+i%3)%3
+- 所以可得当i%3 = 0时，必定可以被整除
+- 当余2时，因为前面余了一个1，所以（1+2）%3也可以被整除，只有余1时不能被整除。
+
+```js
+var readline = require('readline');
+const r1 = readline.createInterface({
+    input:process.stdin,
+    output:process.stdout
+});
+r1.on('line',function(line){
+    let inputData = line.split(' ');
+    let start = parseInt(inputData[0]),
+        end = parseInt(inputData[1]);
+    let result = 0;
+    for(; start <= end; start++){
+          if(start % 3 != 1){
+                 result ++;
+          }
+    }
+    console.log(result);
+});
+// 测试1
+// 2 5
+// 3
+// 测试2
+// 10 110
+// 67
+```
+
 # 解题模板
 
 - node.js
@@ -115,7 +192,7 @@ rl = readline.createInterface({
     input: process.stdin,
     output: process.stdout
 });
-
+//单行输入
 rl.on('line', function(data) {
     // 获取输入
     var inputs = data.trim().split(' ');
