add: 合并k个已排序的链表

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -181,6 +181,97 @@ r1.on('line',function(line){
 // 67
 ```
 
+# 快手
+
+# 合并k个已排序的链表
+
+题目描述
+
+合并k个已排序的链表并将其作为一个已排序的链表返回。分析并描述其复杂度。 
+
+`同leetcode23. 合并K个升序链表`
+
+示例1
+
+输入
+
+```
+[{1,2,3},{4,5,6,7}]
+```
+
+返回值
+
+```
+{1,2,3,4,5,6,7}
+```
+
+## 链表
+
+```js
+/**
+ * 
+ * @param lists ListNode类一维数组 
+ * @return ListNode类
+ */
+function mergeKLists( lists ) {
+  let res = [];
+  // 把所有节点放在res中
+  for (let i = 0; i < lists.length; i++) {
+    let list = lists[i];
+    while(list) {
+      res.push(list);
+      list = list.next;
+    }
+  }
+  // res根据节点的值排序一下
+  res.sort((a, b) => a.val - b.val);
+  // 重新设置next
+  for (let i = 0; i < res.length; i++) {
+    res[i].next = res[i + 1] || null;
+  }
+  // 返回节点头
+  return res[0];
+}
+module.exports = {
+    mergeKLists : mergeKLists
+};
+```
+
+## 分治合并
+
+```js
+function mergeKLists( lists ) {
+  /* 分而治之 */
+  if (lists.length <= 1) return lists[0] || null;
+  const newLists = [];
+  for (let i = 0; i < lists.length; i += 2) {
+    newLists.push(merge(lists[i], lists[i + 1] || null));
+  }
+  return mergeKLists(newLists);
+};
+
+const merge = (list_1, list_2) => {
+  const head = new ListNode(0);
+  let tail  = head;
+
+  while (list_1 && list_2) {
+    if (list_1.val < list_2.val) {
+      tail.next = list_1;
+      list_1 = list_1.next;
+    } else {
+      tail.next = list_2;
+      list_2 = list_2.next;
+    }
+    tail  = tail.next;
+  }
+
+  tail.next = list_1 ? list_1 : list_2;
+  return head.next; 
+};
+```
+
+
+
 # 解题模板
 
 - node.js
