add：搜狗前端笔试题

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -270,6 +270,151 @@ const merge = (list_1, list_2) => {
 };
 ```
 
+# 搜狗
+
+# 问答题
+
+请简述XMLHttpRequest、JSONP的适用场景，并针对两种请求形式简述如何检测请求错误
+
+答：
+
+1. XMLHttpRequest用于浏览器端与服务器端异步请求数据从面实现对页面的无刷新修改，支持GET/POST请求，一般用于非跨域的场景。如果需要使用XMLHttpRequest跨域请求数据，需要通过CORS头支持。 JSONP用于跨域请求数据的场景，只支持GET请求。
+2. .XMLHttpRequest异常判断一般通过该对象的readystate和http状态码status来判断，JSONP的异常判断一般是onerror事件和超时timer来判断。
+
+请简述浏览器渲染页面的过程,并给出下方script代码中对哪些CSS属性的"修改"会触发重绘（repaint）和重排（reflow）？
+
+<style>.sg-container {padding: 10px;margin-bottom: 10px;width: 100px; height: 100px;}</style>
+<div class="sg-container">
+  <p style="line-height:20px">2019搜狗校园招聘</p>
+<script>
+  document.querySelector('p').style.cssText +='height:10px; line-height:24px;font-size:20px;visibility:hidden;background-color:#00f;border:1px solid #f00';
+</script>
+</div>
+
+答：
+
+浏览器渲染过程因不同内核可能会有差异，现以webkit为例描述浏览器渲染原理，浏览器渲染过程主要分为三个阶段，先详述如下：
+第一阶段：
+
+1. 用户输入URL时，webkit依赖网络模块加载网页或资源数据
+2. 网页被交给HTML解释器转变成一系列的词语
+3. 解释器根据词语构建节点并形成DOM树
+4.  如果节点是CSS、图片、视频等资源，会调用资源加载器加载他们，因该类资源加载是异步的，不会阻塞当前DOM树的继续创建
+5. 如果节点是javascript，停止当前DOM树的创建，直到javascript资源加载完成并被javascript引擎执行后才继续进行DOM的创建
+
+第二阶段：
+
+1. CSS解释器解析CSS文件成内部表示结构，并在DOM树上附加样式信息形成RenderObject树
+2. RenderObject节点在创建的同时，webkit会根据网页的层次结构创建RenderLayer树，同时创建一个虚拟的绘图上下文
+
+第三阶段：
+
+1. 根据生成的绘图上下文和2D或3D图形库生成最终的图像
+   对于包含动画和用户交互的动态网页，浏览器的渲染过程会重复的执行，可能会触发不同程度的重排和重绘。
+
+重排属性：height、line-height、font-size、border
+重绘属性：height、line-height、font-size 、border、background-color、visibility
+
+# 检测页面标签
+
+完成一个 getTags 函数，可以检测当前页面用到了哪些标签，函数返回包含标签的字符串的数组，比如页面如下
+
+```
+<``html``>`` ``<``head``></``head``>`` ``<``body``>``  ``<``div``></``div``>``  ``<``p``></``p``>`` ``</``body``>``</``html``>
+```
+
+注意：
+
+-  1、标签名称使用小写
+- 2、请使用ES5语法
+- 3、答题时不要使用第三方插件
+
+【解析】
+
+```js
+var arrNew = [];
+(function getTags() {
+    var list1 = document.getElementsByTagName('*');
+    for(const key in list1){
+        if(list1.hasOwnProperty(key)){
+            const element = list1[key];
+            arrNew.push(element.tagName);
+        }
+    }
+    arrNew = arrNew.join(',').toLowerCase().split(',');
+    console.log(arrNew);
+})()
+```
+
+# 服务器数据分发
+
+时间限制：C/C++ 5秒，其他语言10秒
+
+空间限制：C/C++ 256M，其他语言512M
+
+【题干描述】：我们共有n台服务器，每台服务器可以和若干个子服务器传输数据，n台服务器组成一个树状结构。现在要将一份数据从root节点开始分发给所有服务器。一次数据传输需要一个小时时间，一个节点可以同时对k个儿子节点进行并行传输，不同节点可以并行分发。问，全部分发完成，最短需要多少小时？
+【示例】：当共有5台服务器，其树状结构为    0   /   \  1   2 /  \ 3  4假设每一台服务器同时可以对1个儿子节点（k=1）并行传输，最优的数据传输过程示例如下：  第一个小时，0 -> 1；  第二个小时，1->3 & 0->2；  第三个小时，1 -> 4;所以当k=1时，全部分发完成最短需要3个小时。假设每一台服务器同时可以对2个儿子节点（k=2）并行传输，最优的数据传输过程示例如下：  第一个小时，0 -> 1 & 0 -> 2;  第二个小时，1 -> 3 & 1 -> 4;所以当k=2时，全部分发完成最短需要2个小时。
+
+**输入描述:**
+
+```
+首行输入包含两个参数，分别表示每台服务器允许k个子节点并行传输，以及剩余输入行数。
+其他行用于服务器树状结构描述，每一行表示一个父节点以及父节点对应的所有子节点。每一行都通过空格符分割不同数字，第一位数字为父节点及其所有子节点个数，第二位数字为父节点编号，其他数字为对应的子节点编号。
+```
+
+**输出描述:**
+
+```
+输出全部服务器分发完成，需要的最短时间。
+```
+
+**输入例子1:**
+
+```
+1 2
+3 0 1 2
+2 1 3
+```
+
+**输出例子1:**
+
+```
+2
+```
+
+```js
+var readline = require('readline')
+const rl = readline.createInterface({
+    input: process.stdin,
+    output: process.stdout
+})
+var inputs = [];
+rl.on('line', function(input) {
+    inputs.push(input.trim());
+    if(inputs[0].split(' ')[1] == inputs.length-1)
+    {
+        //每找到一个父节点，就让并可发次数加上本身一次
+        //计算每行除了父节点的总个数，也就是求除了第一行的inputs的首个元素-1的总和-1
+        //然后用总数减去每次找到后的并发数，共计减几次即为几小时
+        var pNodeSum = inputs.length-2;
+        var nodeSum = 0;
+        var hour = inputs[0].split(' ')[0]-0;//-0是快速转化为数字
+        var count = 0;
+        for(let i = 1;i<inputs.length-1;i++)
+            nodeSum+=inputs[i].split(' ')[0]-1;
+        for(let j = pNodeSum;j>0;j--)
+        {
+            nodeSum -= hour;
+            hour += hour;
+            count++;
+        }
+        if(nodeSum>0)
+            count+=Math.ceil(nodeSum/hour);
+        console.log(count);
+    }
+})
+```
+
 
 
 # 解题模板
