--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -1,14 +1,10 @@
 # 数据结构和算法
 
-## 20个最常用最基础的10个数据结构和10个算法
+20个最常用最基础的10个数据结构和10个算法
 
-## 10个数据结构: 
+# 10个数据结构: 
 
 - 数组，链表，栈，队列，散列表，二叉树，堆，跳表，图， Trie树  
-
-## 10个算法： 
-
-- 递归，排序，二分查找，搜索，哈希算法，贪心算法，分治算法，回溯算法，动态规划，字符串匹配算法  
 
 ## [数组](https://github.com/guan997/LeetCode/blob/master/javascript/01_array.md)
 
@@ -39,37 +35,11 @@
 
 - #### 滑动窗口最大值
 
-## [递归](https://github.com/guan997/LeetCode/blob/master/javascript/05_recursion.md)
-
-- #### 爬楼梯
-
-- #### 斐波那契数
-
-## [排序](https://github.com/guan997/LeetCode/blob/master/javascript/06_sort.md)
-
-- #### 冒泡排序
-
-- #### 插入排序
-
-- #### 选择排序
-
-## [二分查找](https://github.com/guan997/LeetCode/master/javascript/07_binary.md)
-
-- #### x 的平方根
-
 ## 散列表
 
 
 
-## [字符串](https://github.com/guan997/LeetCode/master/javascript/08_string.md)
-
-- #### 反转字符串
-
-- #### 翻转字符串里的单词
-
-- #### 字符串转换整数  
-
-## [二叉树](https://github.com/guan997/LeetCode/master/javascript/09_tree.md)
+## [二叉树](https://github.com/guan997/LeetCode/blob/master/javascript/09_tree.md)
 
 - #### 翻转二叉树
 
@@ -86,6 +56,60 @@
 ## 图
 
 - 
+
+## 跳表
+
+- 
+
+## Trie树  
+
+- 
+
+# 10个算法： 
+
+- 递归，排序，二分查找，搜索，哈希算法，贪心算法，分治算法，回溯算法，动态规划，字符串匹配算法  
+
+## [递归](https://github.com/guan997/LeetCode/blob/master/javascript/05_recursion.md)
+
+- #### 爬楼梯
+
+- #### 斐波那契数
+
+## [排序](https://github.com/guan997/LeetCode/blob/master/javascript/06_sort.md)
+
+- #### 冒泡排序
+
+- #### 插入排序
+
+- #### 选择排序
+
+## [二分查找](https://github.com/guan997/LeetCode/blob/master/javascript/07_binary.md)
+
+- #### x 的平方根
+
+## [字符串](https://github.com/guan997/LeetCode/blob/master/javascript/08_string.md)
+
+- #### 反转字符串
+
+- #### 翻转字符串里的单词
+
+- #### 字符串转换整数  
+
+- 
+
+## 搜索
+
+- 
+
+## 哈希算法
+
+- 
+
+## [贪心算法](https://github.com/guan997/LeetCode/blob/master/javascript/10_greedy.md)
+
+- #### 买卖股票的最佳时机 II
+
+- #### 判断子序列
 
 ## 回溯
 
