update:剑指 Offer 21. 调整数组顺序使奇数位于偶数前面

--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -16,6 +16,8 @@
 
 - #### 缺失的第一个正数
 
+- #### 移动零
+
 ## [链表](https://github.com/guan997/LeetCode/blob/master/javascript/07_linkedlist.md)
 
 - #### 环形链表
@@ -120,6 +122,10 @@
 - #### 分发糖果
 
 - #### 根据身高重建队列
+
+- #### 按要求补齐数组
+
+- #### 任务调度器
 
 ## 回溯
 
