update:两个大数相加

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1,6 +1,6 @@
 # 网易
 
-# 牛牛找工作
+## 牛牛找工作
 
 题目描述
 
@@ -42,7 +42,7 @@
 1001
 ```
 
-## 排序+map
+### 排序+map
 
 工作可以多次选择，只需要考虑工作，建立一个map,存储工作能力-报酬映射关系，把小伙伴的能力和报酬也存储进去，报酬初始化为0；从小到大依次更新最大报酬，有动态规划和马尔可夫过程的思想存在，当前最大报酬取决于当前能力与前一个能力对应的最大报酬。
 
@@ -104,7 +104,7 @@ function findMax(item,Di,Pi) {
 }
 ```
 
-# 被3整除
+### 被3整除
 
 题目描述
 
@@ -145,7 +145,7 @@ function findMax(item,Di,Pi) {
 其中12, 123, 12345能被3整除。
 ```
 
-## 数学
+### 数学
 
 解题思路：
 
@@ -183,7 +183,7 @@ r1.on('line',function(line){
 
 # 快手
 
-# 合并k个已排序的链表
+## 合并k个已排序的链表
 
 题目描述
 
@@ -205,7 +205,7 @@ r1.on('line',function(line){
 {1,2,3,4,5,6,7}
 ```
 
-## 链表
+### 链表
 
 ```js
 /**
@@ -237,7 +237,7 @@ module.exports = {
 };
 ```
 
-## 分治合并
+### 分治合并
 
 ```js
 function mergeKLists( lists ) {
@@ -315,7 +315,7 @@ const merge = (list_1, list_2) => {
 重排属性：height、line-height、font-size、border
 重绘属性：height、line-height、font-size 、border、background-color、visibility
 
-# 检测页面标签
+## 检测页面标签
 
 完成一个 getTags 函数，可以检测当前页面用到了哪些标签，函数返回包含标签的字符串的数组，比如页面如下
 
@@ -346,7 +346,7 @@ var arrNew = [];
 })()
 ```
 
-# 服务器数据分发
+## 服务器数据分发
 
 时间限制：C/C++ 5秒，其他语言10秒
 
@@ -415,7 +415,85 @@ rl.on('line', function(input) {
 })
 ```
 
+# 同盾科技
 
+## 两个大数相加
+
+1、是正整数；
+2、两个数无限大；
+3、不能用库函数进行运算相加；
+4、两个数都是以字符串的方式提供。
+
+示例1
+
+输入
+
+```
+var str1 = "123456789";
+var str2 = "11";
+```
+
+返回值
+
+```
+123456800
+```
+
+补零 个位对齐 注意进位
+
+- 将传进来的数字/数字字符串调用toString方法转换成字符串，并进行切割，转成数组
+- 判断两个数组的长度，进行值的互换，将splitNum1设置为最长的值，方便后续计算
+- carry: 进位值； currentNum: 相加之后，除以10的余数； sum: 相加的值
+- 相加，判断是否有进位
+
+```js
+function add(strNum1, strNum2) {
+  // 将传进来的数字/数字字符串调用toString方法转换成字符串，并进行切割，转成数组
+  let splitNum1 = strNum1.toString().split(''),
+    splitNum2 = strNum2.toString().split('')
+
+  // 判断两个数组的长度，进行值的互换，将splitNum1设置为最长的值，方便后续计算
+  if (splitNum1.length < splitNum2.length) {
+    let temp = splitNum1
+    splitNum1 = splitNum2
+    splitNum2 = temp
+  }
+
+  // carry: 进位值； currentNum: 相加之后，除以10的余数； sum: 相加的值
+  let len1 = splitNum1.length,
+    len2 = splitNum2.length,
+    carry = 0,
+    currentNum = 0,
+    sum = 0
+
+  // len1递减到1之后，循环体中的len1 - 1 = 0 即可拿到下标为零的数组元素，
+  // 所以这里条件是 大于 0，下面len2 > 0 同理
+  while (len1 > 0) {
+    if (len2 > 0) {
+      sum = parseInt(splitNum1[len1 - 1]) + parseInt(splitNum2[len2 - 1]) + carry
+    } else {
+      sum = parseInt(splitNum1[len1 - 1]) + carry
+    }
+    carry = Math.floor(sum / 10) // 进位数值
+    currentNum = sum % 10 // 取余数，作为当前位置的数值
+    splitNum1[len1 - 1] = currentNum // 设置当前值
+
+    // 相加之后，数值长度都递减
+    len1--
+    len2--
+  }
+  // 判断是否还有进位
+  if (carry) {
+    splitNum1.unshift(1)
+  }
+  return splitNum1.join('')
+}
+let str1 = 123456789;
+let str2 = 11;
+let result = add(str1, str2)
+
+console.log('result :', result) // result : 11546
+```
 
 # 解题模板
 
