--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -495,6 +495,150 @@ let result = add(str1, str2)
 console.log('result :', result) // result : 11546
 ```
 
+# 奇安信
+
+## 采购员
+
+**题目描述：**
+
+ 1.2020年春节之际，新冠肺炎爆发，国内医疗资源大量紧缺
+
+ 2.小明作为一位采购员，被派到国外采购紧缺物资
+
+ 3.由于国内需要的物资种类很多，不同品牌种类的物资在疫情中的 使用价值 也不同
+
+ 4.在了解商品情况后，小明开始为采购哪些物资才最合适而烦恼。
+
+ 5.假如给定了采购预算 T , 每种物资的价格Pn和使用价值 Wn
+
+ 6.每种物资的可采购数量不限，你能帮他快速决定出应该采购的物资吗？
+
+ 7.要求采购物资的总价格不能超过采购预算
+
+ 8.在这个前提下给出的采购列表要使得这批物资的使用价值最大。
+
+## 亲7数的个数
+
+ **输入描述:**
+ 每个测试输入包含一个测试用例
+ 第一行是总预算(不大于200000)
+ 第二行是物资种类总数 n (不大于20)
+ 后面有n行数据， 每一行代表一种物资的价格和使用价值，被空格分成两列， 每列数据值不大于15000
+
+ 例如 第3行数据中 第一列是物资1的价格P1, 第二列是物资2的使用价值 W1
+ 第4行数据中 第一列是物资2的价格 P2, 第二列是物资2的使用价值 W2。
+ 以此类推，第 n+2 行中第一列是物资 n 的价格 Pn ，第二列是 物资 n 的价格 Wn。
+
+ **输出描述:**
+ 输出采购物资能达到的最高使用价值，格式是单独的一行 数值
+
+```js
+ 示例1：
+ 输入
+ 100
+ 5
+ 77 92
+ 22 22
+ 29 36
+ 50 46
+ 99 90
+ 输出
+ 114
+```
+
+ 说明
+ 100预算、5种商品情况下，购买 1个商品一 和 1个商品二 可以达到最大使用价值114
+
+ ```js
+示例2：
+ 输入
+ 200
+ 8
+ 79 83
+ 58 81
+ 86 54
+ 110 1500
+ 62 52
+ 45 48
+ 68 62
+ 30 22
+
+ 输出
+ 253
+ ```
+
+ 说明
+ 200预算、8种商品情况下，购买 1个商品二 、 1个商品四 和 一个商品八 可以达到最大使用价值253
+
+ **备注:**
+ **注意：每种物资的可采购数量没有限制**
+
+### [47. 全排列 II](https://leetcode-cn.com/problems/permutations-ii/)
+
+难度中等
+
+给定一个可包含重复数字的序列 `nums` ，**按任意顺序** 返回所有不重复的全排列。 
+
+**示例 1：**
+
+```
+输入：nums = [1,1,2]
+输出：
+[[1,1,2],
+ [1,2,1],
+ [2,1,1]]
+```
+
+**示例 2：**
+
+```
+输入：nums = [1,2,3]
+输出：[[1,2,3],[1,3,2],[2,1,3],[2,3,1],[3,1,2],[3,2,1]]
+```
+
+**提示：**
+
+- `1 <= nums.length <= 8`
+- `-10 <= nums[i] <= 10`
+
+**搜索回溯**
+
+```js
+const permuteUnique = (nums) => {
+  const res = [];
+  const len = nums.length;
+  const used = new Array(len);
+  nums.sort((a, b) => a - b); // 升序排序
+
+  const helper = (path) => {
+    if (path.length == len) { // 个数选够了
+      res.push(path.slice()); // path的拷贝 加入解集
+      return;                 // 结束当前递归 结束当前分支
+    }
+
+    for (let i = 0; i < len; i++) { // 枚举出所有的选择
+      if (nums[i - 1] == nums[i] && i - 1 >= 0 && !used[i - 1]) { // 避免产生重复的排列
+        continue;
+      }
+      if (used[i]) {      // 这个数使用过了，跳过。
+        continue;
+      }
+      path.push(nums[i]); // make a choice
+      used[i] = true;     // 记录路径上做过的选择
+      helper(path);       // explore，基于它继续选，递归
+      path.pop();         // undo the choice
+      used[i] = false;    // 也要撤销一下对它的记录
+    }
+  };
+
+  helper([]);
+  return res;
+};
+```
+
+- 时间复杂度：*O*(*n*×*n*!)
+- 空间复杂度：O(n)。我们需要 O(n)的标记数组，同时在递归的时候栈深度会达到 O(n)，因此总空间复杂度为 O(n + n)=O(2n)=O(n)
+
 # 解题模板
 
 - node.js
