update:亲7数的个数

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -573,6 +573,36 @@ console.log('result :', result) // result : 11546
  **备注:**
  **注意：每种物资的可采购数量没有限制**
 
+### 暴力 + 回溯
+
+```js
+def permutation(digit):
+    s= []
+    for i in digit:
+        s.append(str(i))
+        c, res = list(s), []
+    def dfs(x):
+        if x == len(c) - 1:
+            res.append(''.join(c)) # 添加排列方案
+            return 
+        dic = []
+        for i in range(x, len(c)):
+            #if c[i] in dic: continue # 重复，因此剪枝
+            dic.append(c[i])
+            c[i], c[x] = c[x], c[i] # 交换，将 c[i] 固定在第 x 位
+            dfs(x + 1) # 开启固定第 x + 1 位字符
+            c[i], c[x] = c[x], c[i] # 恢复交换
+    dfs(0)
+    result = []
+    for i in res:
+        if int(i) % 7 == 0:
+            result.append((int(i)))
+
+    return len(result)
+permutation([1,1,2])
+>> 2
+```
+
 ### [47. 全排列 II](https://leetcode-cn.com/problems/permutations-ii/)
 
 难度中等
