--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -419,27 +419,94 @@ rl.on('line', function(input) {
 
 ## 两个大数相加
 
-1、是正整数；
-2、两个数无限大；
-3、不能用库函数进行运算相加；
-4、两个数都是以字符串的方式提供。
+题目描述
+
+以字符串的形式读入两个数字，编写一个函数计算它们的和，以字符串形式返回。
+
+（字符串长度不大于100000，保证字符串仅由'0'~'9'这10种字符组成）
 
 示例1
 
 输入
 
 ```
-var str1 = "123456789";
-var str2 = "11";
+"1","99"
 ```
 
 返回值
 
 ```
-123456800
+"100"
 ```
 
-补零 个位对齐 注意进位
+说明
+
+```
+1+99=100 
+```
+
+### **前补0**
+
+（1）通过**前补0**的方式，先对齐两个字符串数字的长度，**并且在这个长度上加上一位**，作为备用进位。
+
+之后，两两对应位置，进行相加，判断和是否大于10：
+
+（2）大于10则前一位进位加1，本位留个位数字。
+
+（3）小于10则直接相加，留下。
+
+（4）最终检查一下首位是否为0（为0，代表无进位，**删除首位字符**即可）
+
+最后，返回答案字符串
+
+```js
+class Solution {
+public:
+    /**
+     * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+     * 计算两个数之和
+     * @param s string字符串 表示第一个整数
+     * @param t string字符串 表示第二个整数
+     * @return string字符串
+     */
+    string solve(string s, string t) {
+        
+        int max_length = s.length() > t.length() ? s.length() + 1 : t.length() + 1;        
+        string temp_zero1(max_length - s.length(), '0');
+        s = temp_zero1 + s;   //对s补0操作
+        string temp_zero2(max_length - t.length(), '0');
+        t = temp_zero2 + t;    //对t补0操作
+
+        string ans;
+        char temp_num[2];
+        temp_num[1] = '\0';
+        for (int i = s.length() - 1; i >= 0; i--) //从最末一位开始往前加
+        {
+            if ((s[i] - '0') + (t[i] - '0') >= 10) //有进位
+            {
+                s[i - 1] = s[i - 1] + 1; // 进一位
+                temp_num[0] = '0' + ((s[i] - '0') + (t[i] - '0') - 10);
+                ans.insert(0, temp_num);
+            }
+            else //无进位
+            {
+                temp_num[0] = '0' + (s[i] - '0') + (t[i] - '0');
+                ans.insert(0, temp_num);
+            }
+        }
+
+        if (ans[0] == '0')
+            ans = ans.erase(0, 1);
+        return ans;
+    }
+};
+```
+
+
+
+### 转换成数组
+
+转换成数组 个位对齐 注意进位
 
 - 将传进来的数字/数字字符串调用toString方法转换成字符串，并进行切割，转成数组
 - 判断两个数组的长度，进行值的互换，将splitNum1设置为最长的值，方便后续计算
