update:大数相加（前补0）

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -417,7 +417,7 @@ rl.on('line', function(input) {
 
 # 同盾科技
 
-## 两个大数相加
+## 大数相加
 
 题目描述
 
@@ -447,62 +447,44 @@ rl.on('line', function(input) {
 
 ### **前补0**
 
-（1）通过**前补0**的方式，先对齐两个字符串数字的长度，**并且在这个长度上加上一位**，作为备用进位。
-
-之后，两两对应位置，进行相加，判断和是否大于10：
+（1）通过**前补0**的方式，先对齐两个字符串数字的长度, 之后，两两对应位置，进行相加，判断和是否大于10：
 
 （2）大于10则前一位进位加1，本位留个位数字。
 
 （3）小于10则直接相加，留下。
 
-（4）最终检查一下首位是否为0（为0，代表无进位，**删除首位字符**即可）
+（4）最终检查一下进位是否为1（为1，代表进位，拼接字符串）
 
 最后，返回答案字符串
 
 ```js
-class Solution {
-public:
-    /**
-     * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
-     * 计算两个数之和
-     * @param s string字符串 表示第一个整数
-     * @param t string字符串 表示第二个整数
-     * @return string字符串
-     */
-    string solve(string s, string t) {
-        
-        int max_length = s.length() > t.length() ? s.length() + 1 : t.length() + 1;        
-        string temp_zero1(max_length - s.length(), '0');
-        s = temp_zero1 + s;   //对s补0操作
-        string temp_zero2(max_length - t.length(), '0');
-        t = temp_zero2 + t;    //对t补0操作
+let a = "9007199254740991";
+let b = "1234567899999999999";
 
-        string ans;
-        char temp_num[2];
-        temp_num[1] = '\0';
-        for (int i = s.length() - 1; i >= 0; i--) //从最末一位开始往前加
-        {
-            if ((s[i] - '0') + (t[i] - '0') >= 10) //有进位
-            {
-                s[i - 1] = s[i - 1] + 1; // 进一位
-                temp_num[0] = '0' + ((s[i] - '0') + (t[i] - '0') - 10);
-                ans.insert(0, temp_num);
-            }
-            else //无进位
-            {
-                temp_num[0] = '0' + (s[i] - '0') + (t[i] - '0');
-                ans.insert(0, temp_num);
-            }
-        }
+function add(a ,b){
+   //取两个数字的最大长度
+   let maxLength = Math.max(a.length, b.length);
+   //用0去补齐长度
+   a = a.padStart(maxLength, 0);//"0009007199254740991"
+   b = b.padStart(maxLength, 0);//"1234567899999999999"
+   //定义加法过程中需要用到的变量
+   let t = 0;
+   let f = 0;   //"进位"
+   let sum = "";
+   for(let i = maxLength - 1; i>=0; i--){
+      t = parseInt(a[i]) + parseInt(b[i]) + f;
+      f = Math.floor(t / 10);
+      sum = t % 10 + sum;
+   }
+   if(f == 1){
+      sum = "1" + sum;
+   }
+   return sum;
+}
+//运行：
 
-        if (ans[0] == '0')
-            ans = ans.erase(0, 1);
-        return ans;
-    }
-};
+//add(a ,b); //结果为：1243575099254740990
 ```
-
-
 
 ### 转换成数组
 
