update:面试题 02.02. 返回倒数第 k 个节点

--- a/程序员面试宝典.md
+++ b/程序员面试宝典.md
@@ -93,3 +93,77 @@ var isUnique = function(astr) {
 };
 ```
 
+# 面试题 02.02. 返回倒数第 k 个节点
+
+难度简单
+
+实现一种算法，找出单向链表中倒数第 k 个节点。返回该节点的值。
+
+**注意：**本题相对原题稍作改动
+
+**示例：**
+
+```
+输入： 1->2->3->4->5 和 k = 2
+输出： 4
+```
+
+**说明：**
+
+给定的 *k* 保证是有效的。
+
+**双指针**
+
+定义两个指针，当快指针走的时候，计数n++, 直到快慢指针之间的偏移量达到了k，慢指针开始移动。当快指针遍历完的同时，慢指针刚好就是倒数k个值。
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @param {number} k
+ * @return {number}
+ */
+var kthToLast = function (head, k) {
+    let fast = head
+    let low = head
+    let n = 0
+    while (fast) {
+        fast = fast.next
+        if (n >= k) {// 快慢指针之间的偏移量达到了k
+            low = low.next//慢指针开始移动
+        }
+        n++
+    }
+    return low.val
+};
+```
+
+- 时间复杂度 O(n)
+- 空间复杂度 O(1)
+
+**栈**
+
+把原链表的结点全部压栈，然后再把栈中最上面的k个节点出栈
+
+```js
+var kthToLast = function(head, k) {
+    //利用栈的特性
+    const statck=[]
+    // 遍历链表，入栈
+    while(head.next!==null){
+        statck.push(head=head.next)
+    }
+    // 利用栈后进先出的特性，
+    while(--k>0){
+        statck.pop()
+    }
+    return statck.pop().val
+};
+```
+
