update:面试题 01.02. 判定是否互为字符重排

--- a/程序员面试宝典.md
+++ b/程序员面试宝典.md
@@ -2,7 +2,7 @@
 
 [面试题 01.01. 判定字符是否唯一](#面试题 01.01. 判定字符是否唯一)
 
-# 面试题 01.01. 判定字符是否唯一
+## 面试题 01.01. 判定字符是否唯一
 
 难度简单
 
@@ -93,7 +93,71 @@ var isUnique = function(astr) {
 };
 ```
 
-# 面试题 02.02. 返回倒数第 k 个节点
+## 面试题 01.02. 判定是否互为字符重排
+
+难度简单
+
+给定两个字符串 `s1` 和 `s2`，请编写一个程序，确定其中一个字符串的字符重新排列后，能否变成另一个字符串。
+
+**示例 1：**
+
+```
+输入: s1 = "abc", s2 = "bca"
+输出: true 
+```
+
+**示例 2：**
+
+```
+输入: s1 = "abc", s2 = "bad"
+输出: false
+```
+
+**说明：**
+
+- `0 <= len(s1) <= 100`
+- `0 <= len(s2) <= 100`
+
+**判断长度**
+
+```js
+/**
+ * @param {string} s1
+ * @param {string} s2
+ * @return {boolean}
+ */
+var CheckPermutation = function(s1, s2) {
+    //长度不对等,肯定不行的
+    if(s1.length!=s2.length){
+        return false;
+    }
+    s2 = s2.split('');
+    //直接循环
+    for(let s of s1){
+        if(s2.indexOf(s)==-1){
+            return false;
+        }else{
+            s2.splice(s2.indexOf(s),1);
+        }
+    }
+    return true;
+};
+```
+
+**把字符串转换为数组，用sort排序后再转换为字符串，进行比较**
+
+```js
+/**
+ * @param {string} s1
+ * @param {string} s2
+ * @return {boolean}
+ */
+var CheckPermutation = function(s1, s2) {
+    return s1.split('').sort().toString()===s2.split('').sort().toString();
+};
+```
+
+## 面试题 02.02. 返回倒数第 k 个节点
 
 难度简单
 
@@ -149,21 +213,17 @@ var kthToLast = function (head, k) {
 
 **栈**
 
-把原链表的结点全部压栈，然后再把栈中最上面的k个节点出栈
+把原链表的结点全部压栈，然后再把栈arr.length - k个节点出栈
 
 ```js
 var kthToLast = function(head, k) {
     //利用栈的特性
-    const statck=[]
-    // 遍历链表，入栈
-    while(head.next!==null){
-        statck.push(head=head.next)
+    const arr = []
+    while(head) {// 遍历链表，入栈
+        arr.push(head.val)
+        head = head.next;
     }
-    // 利用栈后进先出的特性，
-    while(--k>0){
-        statck.pop()
-    }
-    return statck.pop().val
+    return arr[arr.length - k]
 };
 ```
 
