--- a/程序员面试宝典.md
+++ b/程序员面试宝典.md
@@ -1,7 +1,5 @@
 # 程序员面试宝典
 
-[面试题 01.01. 判定字符是否唯一](#面试题 01.01. 判定字符是否唯一)
-
 ## 面试题 01.01. 判定字符是否唯一
 
 难度简单
@@ -298,6 +296,44 @@ var replaceSpaces = function(S, length) {
 ```
 
 引自：[cukewang](https://leetcode-cn.com/problems/string-to-url-lcci/solution/jssan-chong-yi-xing-jie-fa-xiang-jie-by-giao-z/)
+
+## 面试题 01.04. 回文排列
+
+难度简单
+
+给定一个字符串，编写一个函数判定其是否为某个回文串的排列之一。
+
+回文串是指正反两个方向都一样的单词或短语。排列是指字母的重新排列。
+
+回文串不一定是字典当中的单词。
+
+**示例1：**
+
+```
+输入："tactcoa"
+输出：true（排列有"tacocat"、"atcocta"，等等）
+```
+
+ **创建对象作为暂存，最后判断对象中key的长度**
+
+```js
+/**
+ * @param {string} s
+ * @return {boolean}
+ */
+var canPermutePalindrome = function(s) {
+    let obj = {};
+    for(let i = 0; i < s.length; i++){
+        let val = s[i];
+        if(obj[val]){
+            delete obj[val];
+        }else{
+            obj[val] = 1;
+        }
+    }
+    return Object.keys(obj).length <= 1;
+};
+```
 
 ## 面试题 02.02. 返回倒数第 k 个节点
 
