--- a/程序员面试宝典.md
+++ b/程序员面试宝典.md
@@ -335,6 +335,66 @@ var canPermutePalindrome = function(s) {
 };
 ```
 
+## 面试题 01.05. 一次编辑
+
+难度中等48收藏分享切换为英文接收动态反馈
+
+字符串有三种编辑操作:插入一个字符、删除一个字符或者替换一个字符。 给定两个字符串，编写一个函数判定它们是否只需要一次(或者零次)编辑。
+
+**示例 1:**
+
+```
+输入: 
+first = "pale"
+second = "ple"
+输出: True
+```
+
+**示例 2:**
+
+```
+输入: 
+first = "pales"
+second = "pal"
+输出: False
+```
+
+**字符串比较**
+
+如果只有一个地方需要修改，那么定位到不同字符处。有以下两种情况
+（1）长度相同：leetcode 与 leetkode。
+那么我们需要找到 'c' 和 'k'，然后比较 'ode' 和 'ode' 是否相同。
+（2）长度不同：leetcode 与 leetode。
+我们发现 'c' 和 'o' 不相同，然后比较 'ode' 和 'ode' 是否相同。
+
+```js
+/**
+ * @param {string} first
+ * @param {string} second
+ * @return {boolean}
+ */
+var oneEditAway = function(first, second) {
+    let len1 = first.length, len2 = second.length;
+    if(Math.abs(len1 - len2) > 1) return false;
+    let isContinue = true;
+    for(let i = 0, j = 0; i < len1 && j < len2;){
+        if(first[i++] != second[j++]){//判断字符是否相同
+            if(!isContinue) return false;
+            //只能有一个地方需要修改
+            isContinue = false;
+            if(len1 !== len2){
+            // 如果是长度相同字符串，那就比较下一个，如果长度不一样，那就从该字符开始进行比较。
+                len1 > len2 ? j-- : i--;
+            }
+        }
+    }
+    return true;
+};
+```
+
+时间复杂度：O(n)。因为要遍历字符串的每个字符。
+空间复杂度：O(1)。
+
 ## 面试题 02.02. 返回倒数第 k 个节点
 
 难度简单
