update:亲7数的个数

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -566,8 +566,6 @@ console.log('result :', result) // result : 11546
 
  8.在这个前提下给出的采购列表要使得这批物资的使用价值最大。
 
-## 亲7数的个数
-
  **输入描述:**
  每个测试输入包含一个测试用例
  第一行是总预算(不大于200000)
@@ -621,6 +619,29 @@ console.log('result :', result) // result : 11546
 
  **备注:**
  **注意：每种物资的可采购数量没有限制**
+
+## 亲7数的个数
+
+**题目描述：**
+
+1.如果一个正整数可以被7整除，我们称之为亲7数
+
+2.对于给出的一组个位数字，请找出使用所有的数字排列出的数中的亲7数的个数。
+
+3.其中给出的个位数字数组中每一个都是不相关的，即使有重复的数字
+
+4.如{1，1，2}排列出的数为{**112，121，112，121，211，211**}， 亲7数为{112，112}共2个。
+
+输入：个位数字数组，数组有m个元素
+
+输出：亲7数个数
+
+示例1:
+输入
+[1,1,2]
+
+输出
+2
 
 ### 暴力 + 回溯
 
