update:字符串压缩，字符串轮转

--- a/程序员面试宝典.md
+++ b/程序员面试宝典.md
@@ -395,6 +395,101 @@ var oneEditAway = function(first, second) {
 时间复杂度：O(n)。因为要遍历字符串的每个字符。
 空间复杂度：O(1)。
 
+## 面试题 01.06. 字符串压缩
+
+难度简单
+
+字符串压缩。利用字符重复出现的次数，编写一种方法，实现基本的字符串压缩功能。比如，字符串`aabcccccaaa`会变为`a2b1c5a3`。若“压缩”后的字符串没有变短，则返回原先的字符串。你可以假设字符串中只包含大小写英文字母（a至z）。
+
+**示例1:**
+
+```
+ 输入："aabcccccaaa"
+ 输出："a2b1c5a3"
+```
+
+**示例2:**
+
+```
+ 输入："abbccd"
+ 输出："abbccd"
+ 解释："abbccd"压缩后为"a1b2c2d1"，比原字符串长度更长。
+```
+
+**提示：**
+
+1. 字符串长度在[0, 50000]范围内。
+
+**模拟字符串压缩**
+
+初始 一个空字符串strSting、和一个计算次数的变量mun
+循环整个字符串的长度、比较当前的字符串和后一个字符串是否相等、相等 mun + 1
+不相等的话 那就当前的字符串 加上之前的次数变量 aabb => a2 ; 重置当前的 mun 次数
+
+```js
+/**
+ * @param {string} S
+ * @return {string}
+ */
+var compressString = function(S) {
+    let strSting = '',
+        mun = 1;
+    for (let i = 0; i < S.length; i++) {
+        if(S[i] === S[i + 1]) {
+            mun ++ 
+        } else {
+            strSting += S[i] + mun
+            mun = 1
+        }
+    }
+    
+    return (strSting.length >= S.length) ? S : strSting
+};
+```
+
+## 面试题 01.09. 字符串轮转
+
+难度简单
+
+字符串轮转。给定两个字符串`s1`和`s2`，请编写代码检查`s2`是否为`s1`旋转而成（比如，`waterbottle`是`erbottlewat`旋转后的字符串）。
+
+**示例1:**
+
+```
+ 输入：s1 = "waterbottle", s2 = "erbottlewat"
+ 输出：True
+```
+
+**示例2:**
+
+```
+ 输入：s1 = "aa", s2 = "aba"
+ 输出：False
+```
+
+**提示：**
+
+1. 字符串长度在[0, 100000]范围内。
+
+**说明:**
+
+1. 你能只调用一次检查子串的方法吗？
+
+**内涵函数**
+
+```js
+/**
+ * @param {string} s1
+ * @param {string} s2
+ * @return {boolean}
+ */
+var isFlipedString = function(s1, s2) {
+    // 长度不等 false
+    // s2拼接是否包含s1
+    return s1.length === s2.length && (s2 + s2).includes(s1)
+};
+```
+
 ## 面试题 02.02. 返回倒数第 k 个节点
 
 难度简单
