--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -739,6 +739,64 @@ const permuteUnique = (nums) => {
 - 时间复杂度：*O*(*n*×*n*!)
 - 空间复杂度：O(n)。我们需要 O(n)的标记数组，同时在递归的时候栈深度会达到 O(n)，因此总空间复杂度为 O(n + n)=O(2n)=O(n)
 
+# CVTE
+
+## 两数之和
+
+**题目描述**
+
+给出一个整数数组，请在数组中找出两个加起来等于目标值的数，
+
+你给出的函数twoSum 需要返回这两个数字的下标（index1，index2），需要满足 index1 小于index2.。注意：下标是从1开始的
+
+假设给出的数组中只存在唯一解
+
+例如：
+
+给出的数组为 {20, 70, 110, 150},目标值为90
+输出 index1=1, index2=2
+
+示例1
+
+输入
+
+```
+[3,2,4],6
+```
+
+返回值
+
+```
+[2,3]
+```
+
+### **HashMap**
+
+**解题思路**：利用HashMap存储数在numbers[]数组中的值和下标，然后通过for循环遍历数组，当前数为numbers[i]，如果target - numbers[i]等于在HashMap中的key值，那么说明数组中存在两个和为target的数，返回值在数组中的下标。如果不存在就返回null。注意：返回的下标从1开始。
+
+```js
+/**
+  * 
+  * @param numbers int整型一维数组 
+  * @param target int整型 
+  * @return int整型一维数组
+  */
+function twoSum (numbers, target) {
+    const map = new Map();
+    const len = numbers.length;
+    for(let i = 0; i < len; i++){
+        if(map.has(target - numbers[i])){//如果hashmap中包含target - numbers[i]，则找到这两个数，返回下标
+            return [map.get(target - numbers[i]) + 1,i + 1];//注意：返回的下标要从1开始
+        }else{
+            map.set(numbers[i], i);//将numbers[]数组中的值和下标存入hashmap中
+        }
+    }
+};
+module.exports = {
+    twoSum : twoSum
+};
+```
+
 # 解题模板
 
 - node.js
