--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -797,6 +797,99 @@ module.exports = {
 };
 ```
 
+# 小米
+
+## 寻找第K大
+
+**题目描述**
+
+有一个整数数组，请你根据快速排序的思路，找出数组中第K大的数。
+
+给定一个整数数组a,同时给定它的大小n和要找的K(K在1到n之间)，请返回第K大的数，保证答案存在。
+
+示例1
+
+输入
+
+```
+[1,3,5,2,2],5,3
+```
+
+返回值
+
+```
+2
+```
+
+### 快排+二分
+
+快排+二分，与快排不同的是，利用二分法每次都减少了一半的不必要排序。
+
+```js
+/**
+ * 
+ * @param a int整型一维数组 
+ * @param n int整型 
+ * @param K int整型 
+ * @return int整型
+ */
+function findKth( a ,  n ,  K ) {
+    let result = 0;
+    function sort (arr, left, right, k) {
+        if (left > right) {
+            return;
+        }
+        let base = arr[left];
+        let i = left;
+        let j = right;
+        while (j > i) {
+            while ((j > i) && (arr[j] <= base)) {
+                j--;
+            }
+            arr[i] = arr[j];
+            while ((j > i) && (arr[i] >= base)) {
+                i++;
+            }
+            arr[j] = arr[i];
+        }
+        arr[i] = base;
+        result = base;
+        if (i === k - 1) {
+            return;
+        } else if (i > k - 1) {
+            sort(arr, left, i - 1, k);
+        } else if (i < k - 1) {
+            sort(arr, j + 1, right, k);
+        }
+    }
+    sort(a, 0, n - 1, K);
+    return result;
+}
+module.exports = {
+    findKth : findKth
+};
+```
+
+### 库函数
+
+```js
+/**
+ * 
+ * @param a int整型一维数组 
+ * @param n int整型 
+ * @param K int整型 
+ * @return int整型
+ */
+function findKth( a ,  n ,  K ) {
+    // write code here
+    a.sort((a,b)=>b-a);
+    return a[K-1]
+}
+module.exports = {
+    findKth : findKth
+};
+```
+
 # 解题模板
 
 - node.js
