--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -890,6 +890,67 @@ module.exports = {
 };
 ```
 
+## 二分查找
+
+题目描述
+
+请实现有重复数字的有序数组的二分查找。
+
+输出在数组中第一个大于等于查找值的位置，如果数组中不存在这样的数，则输出数组长度加一。
+
+示例1
+
+输入
+
+```
+5,4,[1,2,4,4,5]
+```
+
+返回值
+
+```
+3
+```
+
+说明
+
+```
+输出位置从1开始计算 
+```
+
+**解题思路**：采用二分查找的思想解决问题，首先用两个指针标记左、右，然后用mid所指的位置与关键字比较。若小于关键字，则在其右侧二分查找left = mid+1；若大于等于关键字，则继续在mid的左侧二分查找 result = mid + 1; right = mid。
+
+```js
+/**
+ * 二分查找
+ * @param n int整型 数组长度
+ * @param v int整型 查找值
+ * @param a int整型一维数组 有序数组
+ * @return int整型
+ */
+function upper_bound_( n ,  v ,  a ) {
+           if(a[n-1] < v){
+                return n+1;
+            }
+            let left = 0;
+            let right = n-1;
+            let result = n+1;
+            while(left<right){
+                let mid = Math.floor((left + right)/2);
+                if(a[mid] >= v){ //如果数组中的元素大于目标值，那结果就加1
+                    result = mid + 1;
+                    right = mid;
+                }else{
+                    left = mid+1;
+                }
+            }
+            return result
+}
+module.exports = {
+    upper_bound_ : upper_bound_
+};
+```
+
 # 解题模板
 
 - node.js
