update:单链表的排序

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -892,7 +892,7 @@ module.exports = {
 
 ## 二分查找
 
-题目描述
+**题目描述**
 
 请实现有重复数字的有序数组的二分查找。
 
@@ -948,6 +948,71 @@ function upper_bound_( n ,  v ,  a ) {
 }
 module.exports = {
     upper_bound_ : upper_bound_
+};
+```
+
+# 字节跳动
+
+## 单链表的排序
+
+**题目描述**
+
+给定一个无序单链表，实现单链表的排序(按升序排序)。
+
+示例1
+
+输入
+
+```
+[1,3,2,4,5]
+```
+
+返回值
+
+```
+{1,2,3,4,5}
+```
+
+**选择排序**的大体思路就是先建立已排序区和未排序区（初始状态已排序区为空，未排序区为整个单向链表），循环遍历未排序区找到最小的元素并移动到已排序区的末尾（从未排序区删除）
+
+**解题思路**
+
+1. 先存储链表中各个节点
+2. 使用 sort 进行排序
+3. 将  ListNode 按顺序串联起来
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+
+/**
+ * 
+ * @param head ListNode类 the head node
+ * @return ListNode类
+ */
+function sortInList( head ) {
+    // write code here
+    if(!head) return;
+    let arr = [];
+    let node = head;
+    while(node){
+        arr.push(node.val);
+        node = node.next;
+    }
+    arr.sort((a,b) => a - b);
+    node = head;
+    for(let item of arr){
+        node.val = item;
+        node = node.next;
+    }
+    return head;
+}
+module.exports = {
+    sortInList : sortInList
 };
 ```
 
