--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1016,6 +1016,57 @@ module.exports = {
 };
 ```
 
+## 进制转换
+
+**题目描述**
+
+给定一个十进制数M，以及需要转换的进制数N。将十进制数M转化为N进制数
+
+示例1
+
+输入
+
+```
+7,2
+```
+
+返回值
+
+```
+"111"
+```
+
+备注:
+
+```
+M是32位整数，2<=N<=16.
+```
+
+```js
+/**
+ * 进制转换
+ * @param M int整型 给定整数
+ * @param N int整型 转换到的进制
+ * @return string字符串
+ */
+function solve( M ,  N ) {
+    // write code here
+   const reg = /[a-z]/;
+   const str = M.toString(N);
+    let res = '';
+    for (let item of str) {
+        if (reg.test(item)) {
+            item = item.toUpperCase();
+        }
+        res += item;
+    }
+    return res;
+}
+module.exports = {
+    solve : solve
+};
+```
+
 # 解题模板
 
 - node.js
