--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1067,6 +1067,39 @@ module.exports = {
 };
 ```
 
+## 合并两个有序的数组
+
+给出两个有序的整数数组 ![img](https://www.nowcoder.com/equation?tex=A%20%5C)和 ![img](https://www.nowcoder.com/equation?tex=B%5C)，请将数组 ![img](https://www.nowcoder.com/equation?tex=B%5C)合并到数组 ![img](https://www.nowcoder.com/equation?tex=A%5C)中，变成一个有序的数组
+注意：
+可以假设 ![img](https://www.nowcoder.com/equation?tex=A%5C)数组有足够的空间存放 ![img](https://www.nowcoder.com/equation?tex=B%5C)数组的元素， ![img](https://www.nowcoder.com/equation?tex=A%5C)和 ![img](https://www.nowcoder.com/equation?tex=B%5C)中初始的元素数目分别为 ![img](https://www.nowcoder.com/equation?tex=m%5C)和 ![img](https://www.nowcoder.com/equation?tex=n%5C)
+
+```js
+/**
+ * 
+ * @param A int整型一维数组 
+ * @param B int整型一维数组 
+ * @return void
+ */
+function merge( A, m, B, n ) {
+    // write code here
+    let len = m + n
+    while(n > 0 && m > 0) {
+        if (A[m - 1] > B[n - 1]) {
+            A[--len] = A[--m]
+        } else {
+            A[--len] = B[--n]
+        }
+    }
+    while(n) {
+        A[--len] = B[--n]
+    }
+    return A
+}
+module.exports = {
+    merge : merge
+};
+```
+
 # 解题模板
 
 - node.js
