--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1100,6 +1100,79 @@ module.exports = {
 };
 ```
 
+## 求路径
+
+**题目描述**
+
+一个机器人在m×n大小的地图的左上角（起点）。
+
+机器人每次向下或向右移动。机器人要到达地图的右下角（终点）。
+
+可以有多少种不同的路径从起点走到终点？
+
+![img](https://uploadfiles.nowcoder.com/images/20201210/999991351_1607596327517/873CB1F2327F70DA0CA0FDC797F894A7)
+
+备注：m和n小于等于100,并保证计算结果在int范围内
+
+示例1
+
+输入
+
+```
+2,1
+```
+
+返回值
+
+```
+1
+```
+
+示例2
+
+输入
+
+```
+2,2
+```
+
+返回值
+
+```
+2
+```
+
+```js
+/**
+  * 
+  * @param m int整型 
+  * @param n int整型 
+  * @return int整型
+  */
+function uniquePaths( m ,  n ) {
+    // write code here
+  //可以直接使用递归
+  //使用动态规划的话就需要知道每一个格子都有几种可能
+  //最后维护好这个数组，最后一个数就是我们要求的值
+  let dp = []
+  for(let i = 0; i <= m; i++){
+    let arr = new Array(n+1).fill(0)
+    dp[i] = arr
+  }
+  //这边给
+  dp[0][1] = 1
+  for(let i = 1; i < m+1; i++){
+    for(let j = 1; j < n+1; j++){
+      dp[i][j] = dp[i-1][j] + dp[i][j-1]
+    }
+  }
+  return dp[m][n]
+}
+module.exports = {
+    uniquePaths : uniquePaths
+};
+```
+
 # 解题模板
 
 - node.js
