update:判断一个链表是否为回文结构

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -270,6 +270,67 @@ const merge = (list_1, list_2) => {
 };
 ```
 
+## 判断一个链表是否为回文结构
+
+**题目描述**
+
+给定一个链表，请判断该链表是否为回文结构。
+
+示例1
+
+输入
+
+```
+[1,2,2,1]
+```
+
+返回值
+
+```
+true
+```
+
+### 快慢指针
+
+快慢指针定位到中间节点，然后把后半部分链表反转，然后顺序比较
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+
+/**
+ * 
+ * @param head ListNode类 the head
+ * @return bool布尔型
+ */
+function isPail( head ) {
+    // write code here
+  if(!head || !head.next) return true
+    let arr = []
+    let slow = head,fast = head
+    while(fast && fast.next) {
+        arr.push(slow.val)
+        fast = fast.next.next
+        slow = slow.next
+    }
+    if(fast) {
+        slow = slow.next
+    }
+    while(slow) {
+        if(slow.val != arr.pop()) return false
+        slow = slow.next
+    }
+    return true
+}
+module.exports = {
+    isPail : isPail
+};
+```
+
 # 搜狗
 
 # 问答题
