update:判断链表中是否有环，缺失数字

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1234,6 +1234,101 @@ module.exports = {
 };
 ```
 
+## 判断链表中是否有环
+
+**题目描述**
+
+判断给定的链表中是否有环。如果有环则返回true，否则返回false。
+
+你能给出空间复杂度![img](https://www.nowcoder.com/equation?tex=O(1)%5C)的解法么？
+
+### 快慢指针
+
+快慢指针的解法， 一个指针走两步 一个指针走一步，如果快指针直接到了null 说明没有环， 如果有环的话 总有一次结果会让快指针和慢指针相等。
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+
+/**
+ * 
+ * @param head ListNode类 
+ * @return bool布尔型
+ */
+function hasCycle( head ) {
+    // write code here
+    //快慢两个指针
+    let fast = head;
+    let slow = head;
+    while(fast && fast.next ){
+        //快指针每次走两步
+        fast = fast.next.next;
+         //慢指针每次走一步
+        slow = slow.next;
+        //如果相遇，说明有环，直接返回true
+        if(fast == slow){
+            return true;
+        }
+    }
+    //否则就是没环
+    return false
+}
+module.exports = {
+    hasCycle : hasCycle
+};
+```
+
+## 缺失数字
+
+**题目描述**
+
+从0,1,2,...,n这n+1个数中选择n个数，组成有序数组，找出这n个数中缺失的那个数，要求O(n)尽可能小。
+
+示例1
+
+输入
+
+```
+[0,1,2,3,4,5,7]
+```
+
+返回值
+
+```
+6
+```
+
+### 二分查找
+
+```js
+/**
+ * 找缺失数字
+ * @param a int整型一维数组 给定的数字串
+ * @return int整型
+ */
+function solve( a ) {
+    // write code here
+    let left = 0, right = a.length
+    while(left < right) {
+        const mid = left + Math.floor((right - left) / 2)
+        if (a[mid] === mid) {
+            left = mid + 1
+        } else if (a[mid] > mid) {
+           right = mid
+        }
+    }
+    return left
+    
+}
+module.exports = {
+    solve : solve
+};
+```
+
 # 解题模板
 
 - node.js
@@ -1301,3 +1396,4 @@ rl.on('line',function(input){
 ```
 
 # 
+
