update:容器盛水问题

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1329,6 +1329,87 @@ module.exports = {
 };
 ```
 
+## 容器盛水问题
+
+**题目描述**
+
+给定一个整形数组arr，已知其中所有的值都是非负的，将这个数组看作一个容器，请返回容器能装多少水。
+
+具体请参考样例解释
+
+示例1
+
+输入
+
+```
+[3,1,2,5,2,4]
+```
+
+返回值
+
+```
+5
+```
+
+说明
+
+```
+ 
+```
+
+示例2
+
+输入
+
+```
+[4,5,1,3,2]
+```
+
+返回值
+
+```
+2
+```
+
+说明
+
+<img src="https://uploadfiles.nowcoder.com/images/20200628/323944_1593310519156_4DCDFB8E8F161D1221ECC67C3E7A88F6">
+
+### 双指针
+
+把数组分成两边来看
+l_max存储的是上一个左边较大的，r_max存储的是上一个右边较大的，哪个比较小，就先装哪边的水。
+装水过程 `val += leftMax - arr[left++]`或`val += rightMax - arr[right--];`
+
+```js
+/**
+ * max water
+ * @param arr int整型一维数组 the array
+ * @return long长整型
+ */
+function maxWater( arr ) {
+    // write code here
+    if(!arr) return;
+    let val = 0;
+    let left = 0, right = arr.length - 1;
+    let leftMax = 0, rightMax = 0;
+    while(left < right){
+        leftMax = Math.max(arr[left],leftMax);
+        rightMax = Math.max(arr[right], rightMax);
+        if(leftMax <= rightMax){
+            val += leftMax - arr[left++];
+        }else{
+            val += rightMax - arr[right--];       
+        }
+    }
+    return val
+    
+}
+module.exports = {
+    maxWater : maxWater
+};
+```
+
 # 解题模板
 
 - node.js
