update:在转动过的有序数组中寻找目标值

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1410,6 +1410,126 @@ module.exports = {
 };
 ```
 
+## 在转动过的有序数组中寻找目标值
+
+**题目描述**
+
+给出一个转动过的有序数组，你事先不知道该数组转动了多少
+(例如,0 1 2 4 5 6 7可能变为4 5 6 7 0 1 2).
+在数组中搜索给出的目标值，如果能在数组中找到，返回它的索引，否则返回-1。
+假设数组中不存在重复项。
+
+示例1
+
+输入
+
+```
+[1],0
+```
+
+返回值
+
+```
+-1
+```
+
+示例2
+
+输入
+
+```
+[3,2,1],1
+```
+
+返回值
+
+```
+2
+```
+
+**暴力解法**
+
+```js
+/**
+  * 
+  * @param A int整型一维数组 
+  * @param target int整型 
+  * @return int整型
+  */
+function search( A ,  target ) {
+    // write code here
+    for(var i = 0; i < A.length; i++){
+        if(A[i] == target) return i;
+    }
+    return -1;
+}
+module.exports = {
+    search : search
+};
+```
+
+### 二分查找
+
+- 先判断是否发生旋转，判断旋转的依据就是数组的第一个值大于最后一个值。
+- 如果没有发生旋转，直接用二分查找
+- 如果发生了旋转，找出旋转点，确定了两个有序的子数组，然后在有序的子数组中进行二分查找。while循环结束，left对应的是最大值，right对应的是最小值。
+
+```js
+/**
+  * 
+  * @param A int整型一维数组 
+  * @param target int整型 
+  * @return int整型
+  */
+function search( A ,  target ) {
+    // write code here
+    let index = -1;
+    let left  = 0;
+    let right = A.length - 1;
+    
+    // 没有旋转
+    if (A[left] <= A[right]) {
+        return binarySearch(A, left , right, target);
+    } else {
+        // 有旋转，找到旋转点，确定两个有序子数组
+        while (A[left] > A[right]) {
+            let mid = (left + right) >> 1;
+            if (A[mid] > A[left]) {
+                left = mid;
+            } else {
+                right = mid;
+            }
+        }
+        if (target >= A[0]) {
+            return binarySearch(A,0,left,target);
+        } else {
+            return binarySearch(A,left + 1,A.length - 1,target);
+        }
+    }  
+}
+function binarySearch(A, left, right, target) {
+    if (A == null || A.length == 0) {
+        return -1;
+    }
+    while (left <= right) {
+        let mid = (left + right) >> 1;
+        if (target < A[mid]) {
+            right  = mid -1;
+        } else if (target > A[mid]) {
+            left = mid + 1;
+        } else {
+            return mid;
+        }
+    }
+    return -1;
+}
+module.exports = {
+    search : search
+};
+```
+
+
+
 # 解题模板
 
 - node.js
