--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -331,6 +331,65 @@ module.exports = {
 };
 ```
 
+## 求平方根
+
+**题目描述**
+
+实现函数 int sqrt(int x).
+
+计算并返回x的平方根（向下取整）
+
+示例1
+
+输入
+
+```
+2
+```
+
+返回值
+
+```
+1
+```
+
+### 二分法
+
+- 1.初始范围为1，x
+- 2.当`mid*mid <= x && (mid+1)*(mid+1) > x`时，返回结果
+- 3.当`mid*mid < x`时，到右半部分继续寻找
+- 4.当`mid*mid > x`时，到左半部分继续寻找
+- ps：避免溢出使用逆向运算
+
+```js
+/**
+  * 
+  * @param x int整型 
+  * @return int整型
+  */
+function sqrt( x ) {
+    // write code here
+    // 考虑溢出
+    if(x <= 0) return 0;
+    let left = 1, right = x;
+    while(left < right){
+        let mid = Math.floor((left + right) / 2);
+        if(mid * mid <= x && (mid + 1) * (mid + 1) > x) return mid;
+        if(mid * mid > x){
+            right = mid;
+        }else{
+            left = mid;
+        }
+    }
+    return left;
+}
+module.exports = {
+    sqrt : sqrt
+};
+```
+
+
+
 # 搜狗
 
 # 问答题
@@ -1527,8 +1586,6 @@ module.exports = {
     search : search
 };
 ```
-
-
 
 # 解题模板
 
