update:数字在升序数组中出现的次数

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -388,6 +388,86 @@ module.exports = {
 };
 ```
 
+## 数字在升序数组中出现的次数
+
+**题目描述**
+
+统计一个数字在升序数组中出现的次数。
+
+示例1
+
+输入
+
+```
+[1,2,3,3,3,3,4,5],3
+```
+
+返回值
+
+```
+4
+```
+
+**暴力**
+
+```js
+function GetNumberOfK(data, k)
+{
+    // write code here
+    let count = 0;
+    for(let i = 0; i < data.length; i++) {
+        if(data[i] === k) {
+            count++;
+        }
+    }
+    return count;
+}
+module.exports = {
+    GetNumberOfK : GetNumberOfK
+};
+```
+
+### 二分查找
+
+解题思路：
+
+因为有序，所以目标值`target`如果有多个，肯定是连在一起。又已知我们可以在有序数组中查找任意一个值，因此我们可以先查找目标范围的下界和上界。
+下界定义为：如果存在目标值，则指向第一个目标值，否则，如果不存在， 则指向大于目标值的第一个值。
+上界定义为：不管目标值存在与否，都指向大于目标值的第一个值。
+
+```js
+function GetNumberOfK(data, k)
+{
+    // write code here
+    let start = 0
+    let end = data.length - 1
+    while (start <= end) {
+        const mid = Math.floor(start + (end - start) / 2)
+        if (data[mid] <= k) {
+            start = mid + 1
+        } else {
+            end = mid - 1
+        }
+    }
+    let right = start
+    start = 0
+    end = data.length - 1
+     while (start <= end) {
+        const mid = Math.floor(start + (end - start) / 2)
+        if (data[mid] < k) {
+            start = mid + 1
+        } else {
+            end = mid - 1
+        }
+    }
+    let left = end
+    return right - left -1
+}
+module.exports = {
+    GetNumberOfK : GetNumberOfK
+};
+```
+
 
 
 # 搜狗
@@ -1584,6 +1664,93 @@ function binarySearch(A, left, right, target) {
 }
 module.exports = {
     search : search
+};
+```
+
+## 最长递增子序列
+
+**题目描述**
+
+给定数组arr，设长度为n，输出arr的最长递增子序列。（如果有多个答案，请输出其中字典序最小的）
+
+示例1
+
+输入
+
+```
+[2,1,5,3,6,4,8,9,7]
+```
+
+返回值
+
+```
+[1,3,4,8,9]
+```
+
+示例2
+
+输入
+
+```
+[1,2,8,6,4]
+```
+
+返回值
+
+```
+[1,2,4]
+```
+
+说明
+
+```
+其最长递增子序列有3个，（1，2，8）、（1，2，6）、（1，2，4）其中第三个字典序最小，故答案为（1，2，4）
+```
+
+```js
+/**
+ * retrun the longest increasing subsequence
+ * @param arr int整型一维数组 the array
+ * @return int整型一维数组
+ */
+function LIS( arr ) {
+    // write code here
+    let length = arr.length;
+    let end = new Array(length+1);
+    let dp = new Array(length);
+    let n = 1;
+    end[1] = arr[0];
+    dp[0] = 1;
+    for(let i=0;i<length;i++) {
+        if(end[n] < arr[i]) {
+            end[++n] = arr[i];
+            dp[i] = n;
+        } else {
+            let left = 0;
+            let right = n;
+            while(left<=right) {
+                let mid = left + Math.floor((right-left)/2);
+                if(end[mid] >= arr[i]) {
+                    right = mid-1;
+                } else {
+                    left = mid + 1;
+                }
+            }
+            end[left] = arr[i];
+            dp[i] = left;
+        }
+    }
+    let res = new Array(n);
+    for(let i=length-1;i>=0;i--) {
+        if(dp[i] === n) {
+            res[--n] = arr[i];
+        }
+    }
+    return res;
+    
+}
+module.exports = {
+    LIS : LIS
 };
 ```
 
