--- a/程序员面试宝典.md
+++ b/程序员面试宝典.md
@@ -560,3 +560,50 @@ var kthToLast = function(head, k) {
 };
 ```
 
+## 面试题 02.06. 回文链表
+
+难度简单
+
+编写一个函数，检查输入的链表是否是回文的。
+
+**示例 1：**
+
+```
+输入： 1->2
+输出： false 
+```
+
+**示例 2：**
+
+```
+输入： 1->2->2->1
+输出： true 
+```
+
+**进阶：**
+你能否用 O(n) 时间复杂度和 O(1) 空间复杂度解决此题？
+
+**将值复制到数组中后用双指针法**
+
+```js
+var isPalindrome = function(head) {
+    const vals = [];
+    while (head !== null) {
+        vals.push(head.val);
+        head = head.next;
+    }
+    for (let i = 0, j = vals.length - 1; i < j; ++i, --j) {
+        if (vals[i] !== vals[j]) {
+            return false;
+        }
+    }
+    return true;
+};
+```
+
+- 时间复杂度：O(n)，其中 n 指的是链表的元素个数。
+  - 第一步： 遍历链表并将值复制到数组中，O(n)。
+  - 第二步：双指针判断是否为回文，执行了 O(n/2) 次的判断，即 O(n)。
+  - 总的时间复杂度：O(2n)=O(n)。
+- 空间复杂度：O(n)，其中 n 指的是链表的元素个数，我们使用了一个数组列表存放链表的元素值
+
